tests/paczka1/fuzzy1/55657220.err
Error in line 2: DOy S860 87,4
Error in line 1: 8d5 A514 98,5
Error in line 26: wLGsbJqvG17 A656 43,7
Error in line 33: 8d5 A811 e,1
Error in line 30: A514 A811 83,1
